test settings for linear

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Test connection to Github and Linear</p>
+    <p>Test connection to Github and Linear test 1</p>
 </body>
 </html>
