--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="static/style.css">
+    <title>Taste Masters</title>
 </head>
 <body>
-    <p>Test connection to Github and Linear test 1</p>
+    <p>If text is red, the css file is linked to the html files</p>
 </body>
 </html>
