Add hamburger nav menu at <600px and style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Taste Masters</title>
 </head>
 <body>
-    <p>If text is red, the css file is linked to the html files</p>
+    <nav>
+        <div class="hamburger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Courses</a></li>
+            <li><a href="#">Reviews</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
