--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
+    <script src="https://kit.fontawesome.com/fae4e24a2e.js" crossorigin="anonymous"></script>
     <title>Taste Masters</title>
 </head>
 <body>
@@ -24,5 +25,6 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <i class="fa-solid fa-tree"></i>
 </body>
 </html>
