--- a/testimonials.html
+++ b/testimonials.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
     <script src="https://kit.fontawesome.com/fae4e24a2e.js" crossorigin="anonymous"></script>
-    <title>Taste Masters | Home</title>
+    <title>Taste Masters | Testimonials</title>
 </head>
 <body>
     <nav>
@@ -25,7 +25,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Homepage</h1>
+    <h1>Testimonials</h1>
     <script src="js/script.js"></script>
 </body>
 </html>
