--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <nav>
-        <div class="hamburger">
+        <div class="hamburger" onclick="toggleMenu()">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
         </div>
-        <ul>
+        <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="courses.html">Courses</a></li>
