Add homepage design with line and circle

--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Homepage</h1>
+    <div id="center-line">
+        <div class="circle">
+            <h1>
+                <span>Taste</span>
+                <span>Masters</span>
+                <div class="cookery-school">Cookery School</div>
+            </h1>
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
