Update index.html and style.css for location text

--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
             <h1>
                 <span>Taste</span>
                 <span>Masters</span>
-                <div class="cookery-school">Cookery School</div>
+                <span class="cookery-school">Cookery School</span>
             </h1>
         </div>
+    </div>
+    <div class="location-container">
+        <span>The Old Bank</span>
+        <span>Conwy</span>
+        <span>North Wales</span>
     </div>
     <script src="js/script.js"></script>
 </body>
