Update homepage layout and add chefs-kitchen image

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
     <script src="https://kit.fontawesome.com/fae4e24a2e.js" crossorigin="anonymous"></script>
     <title>Taste Masters | Home</title>
 </head>
+
 <body>
     <nav>
         <div class="hamburger" onclick="toggleMenu()">
@@ -25,20 +29,28 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div id="center-line">
-        <div class="circle">
-            <h1>
-                <span>Taste</span>
-                <span>Masters</span>
-                <span class="cookery-school">Cookery School</span>
-            </h1>
+    <section class="full-screen-container">
+        <div id="center-line">
+            <div class="circle">
+                <h1>
+                    <span>Taste</span>
+                    <span>Masters</span>
+                    <span class="cookery-school">Cookery School</span>
+                </h1>
+            </div>
         </div>
-    </div>
-    <div class="location-container">
-        <span>The Old Bank</span>
-        <span>Conwy</span>
-        <span>North Wales</span>
-    </div>
+        <div class="location-container">
+            <span>The Old Bank</span>
+            <span>Conwy</span>
+            <span>North Wales</span>
+        </div>
+    </section>
+
+    <img src="static\images\chefs-kitchen.webp" alt="Chefs in uniform preparing food in a kitchen"
+        class="full-chefs-kitchen">
+
+
     <script src="js/script.js"></script>
 </body>
+
 </html>
