Add new divider elements and styles to homepage

--- a/index.html
+++ b/index.html
@@ -45,10 +45,23 @@
             <span>North Wales</span>
         </div>
     </section>
-
     <img src="static\images\chefs-kitchen.webp" alt="Chefs in uniform preparing food in a kitchen"
         class="full-chefs-kitchen">
-
+    <div>
+        <div class="grey-divider">
+            <img class="centered-michelin" src="static\images\michelin-logo.png" alt=" Red Michalin logo 2023">
+        </div>
+        <div class="blue-divider">
+            <div class="circle-for-icon">
+                <img class="school-logo" src="static\images\School.png" alt="White logo of a school">
+            </div>
+        </div>
+    </div>
+    <section>
+        <div class="text-container-one">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nostrum molestiae natus ullam dolores esse at omnis soluta reprehenderit quasi iste nobis commodi consectetur dolorem, molestias fugit praesentium perferendis aut.</p>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
