Add dashed line and text with margins

--- a/index.html
+++ b/index.html
@@ -59,7 +59,16 @@
     </div>
     <section>
         <div class="text-container-one">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nostrum molestiae natus ullam dolores esse at omnis soluta reprehenderit quasi iste nobis commodi consectetur dolorem, molestias fugit praesentium perferendis aut.</p>
+            <div class="dashed-line">
+                <div><h2>World Class Cookery School</h2>
+                    <p>Taste Masters, established in 1921, is a revered cookery school nestled in the heart of Conwy Town, North Wales.</p>
+                    <p> prestigious institution has carved out a unique niche in the culinary world, blending traditional cooking techniques with innovative gastronomic trends.</p>    
+                    <p>Housed in a historical bank building, the school exudes an aura of old-world charm mixed with modern culinary finesse. Its location in Conwy, a town known for its rich history and stunning medieval architecture, adds to its allure, making it a sought-after destination for aspiring chefs and food enthusiasts from around the globe. The school’s longevity is a testament to its commitment to excellence in culinary education, consistently attracting some of the most talented and passionate culinary instructors and students.</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+        </div>
         </div>
     </section>
 
