Update school logo and add new section for courses

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="blue-divider">
             <div class="circle-for-icon">
-                <img class="school-logo" src="static\images\School.png" alt="White logo of a school">
+                <img class="school-logo" src="static\images\school.png" alt="White logo of a school">
             </div>
         </div>
     </div>
@@ -75,6 +75,34 @@
         </div>
         </div>
     </section>
+    <div class="blue-divider">
+        <div class="circle-for-icon">
+            <img class="book-logo" src="static\images\book.png" alt="White logo of a school">
+        </div>
+    </div>
+    <section>
+        <div class="bkg-container-one">
+            <div class="dashed-line">
+                <h2>Our Courses</h2>
+                <div class="text-container">
+                    <div class="image-section">
+                        <img src="static\images\kitchen-overview.png" alt="Chefs preparing food in a kitchen">
+                    </div>
+                    <div class="text-section-courses">
+                        <p>Embark on a culinary journey with Taste Masters Cookery School, where passion for food meets the art of cooking. Our courses, ranging from beginner basics to advanced techniques, are designed to inspire and hone your skills in the kitchen, guided by world-class chefs in a state-of-the-art setting.</p>
+                        <p>Click the links below to see more information on our couses:</p>    
+                        <ul class="courses-links">
+                            <li><a href="courses.html">Beginner Courses</a></li>
+                            <li><a href="courses.html">Intermediate Courses</a></li>
+                            <li><a href="courses.html">Advanced Courses</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+    
 
     <script src="js/script.js"></script>
 </body>
