Add instagram section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section>
         <div class="bkg-container-one">
             <div class="dashed-line">
-                <h2>World Class Cookery School</h2>
+                <h2 class="sub-heading">World Class Cookery School</h2>
                 <div class="text-container">
                     <div class="text-section">
                         <p>Taste Masters, established in 1921, is a revered cookery school nestled in the heart of Conwy Town, North Wales.</p>
@@ -83,7 +83,7 @@
     <section>
         <div class="bkg-container-one">
             <div class="dashed-line">
-                <h2>Our Courses</h2>
+                <h2 class="sub-heading">Our Courses</h2>
                 <div class="text-container">
                     <div class="image-section">
                         <img src="static\images\kitchen-overview.png" alt="Chefs preparing food in a kitchen">
@@ -102,6 +102,41 @@
         </div>
         </div>
     </section>
+    <div class="blue-divider"></div>
+    <section class="instagram">
+        <h2 class="sub-heading">Instagram Feed</h2>
+        <p class="insta-info">TASTEMASTERS / <span id="date"> </span> / examples of dishes</p>
+        <section class="image-grid">
+            <div class="image-row">
+                <div class="image">
+                    <img src="static\images\meat-plate.png" alt="fillet of beef on a plate">
+                </div>
+                <div class="image">
+                    <img src="static\images\prawn-plate.png" alt="prawn and scallops on a plate">
+                </div>
+                <div class="image">
+                    <img src="static\images\cake-plate.png" alt="white and milk chocolate cake with fruit ontop">
+                </div>
+                <div class="image">
+                    <img src="static\images\salad-plate.png" alt="grilled vegetables on a plate">
+                </div>
+            </div>
+            <div class="image-row">
+                <div class="image">
+                    <img src="static\images\lambchop-plate.png" alt="lamb chop on a plate with vegetables">
+                </div>
+                <div class="image">
+                    <img src="static\images\fancycake-plate.png" alt="A fancy cake on a plate with fruit">
+                </div>
+                <div class="image">
+                    <img src="static\images\salmon-plate.png" alt="A salmon fillet with vegetables and sauce on a plate">
+                </div>
+                <div class="image">
+                    <img src="static\images\fondou-plate.png" alt="A chocolate fondoue on a plate icecream and chocolate sauce">
+                </div>
+            </div>
+        </section>
+        <div class="blue-divider"></div>
     
 
     <script src="js/script.js"></script>
