Update circle content in index.html and add flip animation in style.css

--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
     <section class="full-screen-container">
         <div id="center-line">
             <div class="circle">
-                <h1>
-                    <span>Taste</span>
-                    <span>Masters</span>
-                    <span class="cookery-school">Cookery School</span>
-                </h1>
+                <div class="circle-content front">
+                    <h1>
+                        <span>Taste</span>
+                        <span>Masters</span>
+                        <span class="cookery-school">Cookery School</span>
+                    </h1>
+                </div>
+                <div class="circle-content back">
+                    <span>Hello, how are you?</span>
+                </div>
             </div>
         </div>
         <div class="location-container">
