Update footer text, <a> tags, socials, mailto and tel

--- a/index.html
+++ b/index.html
@@ -150,9 +150,32 @@
         <div class="blue-divider"></div>
         <!-- footer -->
         <footer>
-            <div class="footer-column" id="column1">Column 1 Content</div>
-            <div class="footer-column" id="column2">Column 2 Content</div>
-            <div class="footer-column" id="column3">Column 3 Content</div>
+            <div class="footer-column" id="column1">
+                <p>Taste Masters <span>&copy; </span><span id="currentYear"></span></p>
+                <ul id="socials">
+                    <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
+                    <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+                </ul>
+            </div>
+            <div class="footer-column" id="column2">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="courses.html">Courses</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+               
+            </div>
+            <div class="footer-column" id="column3">
+                <ul>
+                    <li>Get In Touch</li>
+                    <li>Contact Us</li>
+                    <li><a href="tel:+01234567890">01234 567890</a></li>
+                    <li><a href="mailto:info@tastemasters.com">info@tastemasters.com</a></li>
+                </ul>
+            </div>
         </footer>
           
     <script src="js/script.js"></script>
