Align text left in centerd containers for column 2+3

--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
         <div class="blue-divider"></div>
         <!-- footer -->
         <footer>
+            <!-- column 1 -->
             <div class="footer-column" id="column1">
+                <div class="content-wrapper">
                 <p>Taste Masters <span>&copy; </span><span id="currentYear"></span></p>
                 <ul id="socials">
                     <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
@@ -158,7 +160,11 @@
                     <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
                 </ul>
             </div>
+            </div>
+            <!-- column 2 -->
             <div class="footer-column" id="column2">
+                <div class="content-wrapper">
+                <p>Quick Links</p>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -166,15 +172,18 @@
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-               
             </div>
+            </div>
+            <!-- column 3 -->
             <div class="footer-column" id="column3">
+                <div class="content-wrapper">
+                <p>Get In Touch</p>
                 <ul>
-                    <li>Get In Touch</li>
                     <li>Contact Us</li>
                     <li><a href="tel:+01234567890">01234 567890</a></li>
                     <li><a href="mailto:info@tastemasters.com">info@tastemasters.com</a></li>
                 </ul>
+                </div>
             </div>
         </footer>
           
