Add google image to footer column 1

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
             <div class="footer-column" id="column1">
                 <div class="content-wrapper">
                 <p>Taste Masters <span>&copy; </span><span id="currentYear"></span></p>
+                <img src="static/images/google-logo.png" alt="">
                 <ul id="socials">
                     <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
                     <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
