Add padding to ul li

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="content-wrapper">
                 <p>Get In Touch</p>
                 <ul>
-                    <li>Contact Us</li>
+                    <li>Contact Us:</li>
                     <li><a href="tel:+01234567890">01234 567890</a></li>
                     <li><a href="mailto:info@tastemasters.com">info@tastemasters.com</a></li>
                 </ul>
