Add icons to footer

--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
             <div class="footer-column" id="column1">
                 <div class="content-wrapper">
                 <p>Taste Masters <span>&copy; </span><span id="currentYear"></span></p>
-                <img src="static/images/google-logo.png" alt="">
+                <img src="static/images/footer-logos/google-logo.png" alt="">
                 <ul id="socials">
-                    <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
-                    <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+                    <li><a href="https://www.facebook.com" target="_blank"><img src="static/images/footer-logos/facebook-logo.png" alt="facebook logo"></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><img src="static/images/footer-logos/insta-logo.png" alt="instagram logo"></a></li>
+                    <li><a href="https://www.twitter.com" target="_blank"><img src="static/images/footer-logos/x-logo.png" alt="X logo"></a></li>
                 </ul>
             </div>
             </div>
@@ -181,8 +181,8 @@
                 <p>Get In Touch</p>
                 <ul>
                     <li>Contact Us:</li>
-                    <li><a href="tel:+01234567890">01234 567890</a></li>
-                    <li><a href="mailto:info@tastemasters.com">info@tastemasters.com</a></li>
+                    <li><a href="tel:+01234567890"><img src="static/images/footer-logos/phone.png"><span>(+44) 0800 567890</span></a></li>
+                    <li><a href="mailto:info@tastemasters.com"><img src="static/images/footer-logos/mail-outbox.png"><span>info@tastemasters.com</span></a></li>
                 </ul>
                 </div>
             </div>
