style footer as per designs

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </h1>
                 </div>
                 <div class="circle-content back">
-                    <span>Hello, how are you?</span>
+                    <span>Curious? Scroll Down...</span>
                 </div>
             </div>
         </div>
