Add lightbox functionality for image gallery

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
     <script src="https://kit.fontawesome.com/fae4e24a2e.js" crossorigin="anonymous"></script>
     <title>Taste Masters | Home</title>
@@ -119,30 +120,46 @@
         <div class="image-grid">
             <div class="image-row">
                 <div class="image">
-                    <img src="static/images/meat-plate.png" alt="fillet of beef on a plate">
+                    <a href="static/images/meat-plate.png" data-lightbox="gallery" data-title="Fillet of beef on a plate">
+                        <img src="static/images/meat-plate.png" alt="fillet of beef on a plate">
+                    </a>
                 </div>
                 <div class="image">
-                    <img src="static/images/prawn-plate.png" alt="prawn and scallops on a plate">
+                    <a href="static/images/prawn-plate.png" data-lightbox="gallery" data-title="Prawn and scallops on a plate">
+                        <img src="static/images/prawn-plate.png" alt="prawn and scallops on a plate">
+                    </a>
                 </div>
                 <div class="image">
-                    <img src="static/images/cake-plate.png" alt="white and milk chocolate cake with fruit ontop">
+                    <a href="static/images/cake-plate.png" data-lightbox="gallery" data-title="White and milk chocolate cake with fruit ontop">
+                        <img src="static/images/cake-plate.png" alt="white and milk chocolate cake with fruit ontop">
+                    </a>
                 </div>
                 <div class="image">
-                    <img src="static/images/salad-plate.png" alt="grilled vegetables on a plate">
+                    <a href="static/images/salad-plate.png" data-lightbox="gallery" data-title="Grilled vegetables on a plate">
+                        <img src="static/images/salad-plate.png" alt="grilled vegetables on a plate">
+                    </a>
                 </div>
             </div>
             <div class="image-row">
                 <div class="image">
-                    <img src="static/images/lambchop-plate.png" alt="lamb chop on a plate with vegetables">
+                    <a href="static/images/lambchop-plate.png" data-lightbox="gallery" data-title="Lamb chop on a plate with vegetables">
+                        <img src="static/images/lambchop-plate.png" alt="lamb chop on a plate with vegetables">
+                    </a>
                 </div>
                 <div class="image">
-                    <img src="static/images/fancycake-plate.png" alt="A fancy cake on a plate with fruit">
+                    <a href="static/images/fancycake-plate.png" data-lightbox="gallery" data-title="A fancy cake on a plate with fruit">
+                        <img src="static/images/fancycake-plate.png" alt="A fancy cake on a plate with fruit">
+                    </a>
                 </div>
                 <div class="image">
-                    <img src="static/images/salmon-plate.png" alt="A salmon fillet with vegetables and sauce on a plate">
+                    <a href="static/images/salmon-plate.png" data-lightbox="gallery" data-title="A salmon fillet with vegetables and sauce on a plate">
+                        <img src="static/images/salmon-plate.png" alt="A salmon fillet with vegetables and sauce on a plate">
+                    </a>
                 </div>
                 <div class="image">
-                    <img src="static/images/fondou-plate.png" alt="A chocolate fondoue on a plate icecream and chocolate sauce">
+                    <a href="static/images/fondou-plate.png" data-lightbox="gallery" data-title="A chocolate fondoue on a plate icecream and chocolate sauce">
+                        <img src="static/images/fondou-plate.png" alt="A chocolate fondoue on a plate icecream and chocolate sauce">
+                    </a>
                 </div>
             </div>
         </div>
@@ -187,7 +204,9 @@
                 </div>
             </div>
         </footer>
-          
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
     <script src="js/script.js"></script>
 </body>
 
