Update footer image and styles

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="footer-column" id="column1">
                 <div class="content-wrapper">
                 <p>Taste Masters <span>&copy; </span><span id="currentYear"></span></p>
-                <img src="static/images/footer-logos/google-logo.png" alt="">
+                <img src="static/images/footer-logos/google-logo.png" alt="goole logo with 5 stars" id="google-logo">
                 <ul id="socials">
                     <li><a href="https://www.facebook.com" target="_blank"><img src="static/images/footer-logos/facebook-logo.png" alt="facebook logo"></a></li>
                     <li><a href="https://www.instagram.com" target="_blank"><img src="static/images/footer-logos/insta-logo.png" alt="instagram logo"></a></li>
