Update contact information in footer

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                 <p>Get In Touch</p>
                 <ul>
                     <li>Contact Us:</li>
-                    <li><a href="tel:+01234567890"><img src="static/images/footer-logos/phone.png"><span>(+44) 0800 567890</span></a></li>
-                    <li><a href="mailto:info@tastemasters.com"><img src="static/images/footer-logos/mail-outbox.png"><span>info@tastemasters.com</span></a></li>
+                    <li><a href="tel:+01234567890"><img src="static/images/footer-logos/phone.png" alt="telephone logo"><span>(+44) 0800 567890</span></a></li>
+                    <li><a href="mailto:info@tastemasters.com"><img src="static/images/footer-logos/mail-outbox.png" alt="email logo"><span>info@tastemasters.com</span></a></li>
                 </ul>
                 </div>
             </div>
