--- a/contact.html
+++ b/contact.html
@@ -6,26 +6,109 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/main.css">
+    <link rel="stylesheet" href="static/contact.css">
     <script src="https://kit.fontawesome.com/fae4e24a2e.js" crossorigin="anonymous"></script>
     <title>Taste Masters | Contact</title>
 </head>
 <body>
+    <!-- navigation -->
     <nav>
-        <div class="hamburger">
+        <div class="hamburger" onclick="toggleMenu()">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
         </div>
-        <ul>
+        <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="courses.html">Courses</a></li>
-            <li><a href="testimonials.html">Testimonials</a></li>
+            <li><a href="reviews.html">Reviews</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Contact</h1>
+    <!-- full screen landing section with circle -->
+    <section class="full-screen-container">
+        <div id="center-line-1">
+            <div class="circle-1">
+                <div class="circle-content-1 front-1">
+                    <h1>
+                        <span>Contact</span>
+                    </h1>
+                </div>
+                <div class="circle-content-1 back-1">
+                    <span>Talk To Us</span>
+                </div>
+            </div>
+        </div>
+       
+    </section>
+        <div class="blue-divider">
+            <div class="circle-for-icon">
+                <img class="school-logo" src="static/images/school.png" alt="White logo of a school">
+            </div>
+        </div>
+    </div>
+    <!-- intro section -->
+    <section>
+        <div class="bkg-container-one">
+            <div class="dashed-line">
+                <h2 class="sub-heading">Meet The Chefs</h2>
+                <div class="text-container">
+                    <div class="text-section">
+                        <p>Taste Masters, established in 1921, is a revered cookery school nestled in the heart of Conwy Town, North Wales.</p>
+                        <p> prestigious institution has carved out a unique niche in the culinary world, blending traditional cooking techniques with innovative gastronomic trends.</p>    
+                        <p>Housed in a historical bank building, the school exudes an aura of old-world charm mixed with modern culinary finesse. Its location in Conwy, a town known for its rich history and stunning medieval architecture, adds to its allure, making it a sought-after destination for aspiring chefs and food enthusiasts from around the globe. The school’s longevity is a testament to its commitment to excellence in culinary education, consistently attracting some of the most talented and passionate culinary instructors and students.</p>
+                    </div>
+                    <div class="image-section">
+                        <img src="static/images/front-of-school.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="blue-divider">
+    </section>
+        <!-- footer -->
+    <footer>
+        <!-- column 1 -->
+        <div class="footer-column" id="column1">
+            <div class="content-wrapper">
+            <p>Taste Masters <span>&copy; </span><span id="currentYear"></span></p>
+            <img src="static/images/footer-logos/google-logo.png" alt="goole logo with 5 stars" id="google-logo">
+            <ul id="socials">
+                <li><a href="https://www.facebook.com" target="_blank"><img src="static/images/footer-logos/facebook-logo.png" alt="facebook logo"></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><img src="static/images/footer-logos/insta-logo.png" alt="instagram logo"></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><img src="static/images/footer-logos/x-logo.png" alt="X logo"></a></li>
+            </ul>
+        </div>
+        </div>
+        <!-- column 2 -->
+        <div class="footer-column" id="column2">
+            <div class="content-wrapper">
+            <p>Quick Links</p>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+        </div>
+        <!-- column 3 -->
+        <div class="footer-column" id="column3">
+            <div class="content-wrapper">
+            <p>Get In Touch</p>
+            <ul>
+                <li>Contact Us:</li>
+                <li><a href="tel:+01234567890"><img src="static/images/footer-logos/phone.png" alt="telephone logo"><span>(+44) 0800 567890</span></a></li>
+                <li><a href="mailto:info@tastemasters.com"><img src="static/images/footer-logos/mail-outbox.png" alt="email logo"><span>info@tastemasters.com</span></a></li>
+            </ul>
+            </div>
+        </div>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
