--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="courses.html">Courses</a></li>
-            <li><a href="testimonials.html">Testimonials</a></li>
+            <li><a href="reviews.html">Reviews</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -187,7 +187,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="courses.html">Courses</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="reviews.html">Reviews</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -206,7 +206,6 @@
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
-
     <script src="js/script.js"></script>
 </body>
 
