--- a/reviews.html
+++ b/reviews.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/main.css">
-    <link rel="stylesheet" href="static/about.css">
+    <link rel="stylesheet" href="static/reviews.css">
     <script src="https://kit.fontawesome.com/fae4e24a2e.js" crossorigin="anonymous"></script>
-    <title>Taste Masters | About</title>
+    <title>Taste Masters | Reviews</title>
 </head>
 <body>
     <!-- navigation -->
@@ -23,7 +23,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="courses.html">Courses</a></li>
-            <li><a href="Reviews.html">Reviews</a></li>
+            <li><a href="reviews.html">Reviews</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -33,11 +33,11 @@
             <div class="circle-1">
                 <div class="circle-content-1 front-1">
                     <h1>
-                        <span>About</span>
+                        <span>Reviews</span>
                     </h1>
                 </div>
                 <div class="circle-content-1 back-1">
-                    <span>Find Out About Our School</span>
+                    <span>Check Our Reviews</span>
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="courses.html">Courses</a></li>
-                <li><a href="Reviews.html">Reviews</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
