Build about us section and make responsive

--- a/about.html
+++ b/about.html
@@ -41,7 +41,27 @@
                 </div>
             </div>
         </div>
-       
+    <div class="about-container">
+        <div class="about-intro">
+            <div>
+                <p>Over the years, Taste Masters has evolved, adapting to the changing tides of the culinary arts while maintaining its core values and historical essence. The school's interior, once home to financial transactions, now resonates with the bustling energy of cooking classes, where students learn a diverse range of cuisines and cooking techniques.</p>
+                <p>The old bank's vault, ingeniously converted into a wine cellar, hosts wine tasting sessions, offering a unique experience that beautifully marries the building's history with its current gastronomic purpose.<br> Taste Masters’ curriculum is thoughtfully designed to cover a wide spectrum of culinary skills, from basic cooking methods to advanced techniques, ensuring that every student, regardless of their skill level, receives a comprehensive culinary education.</p>
+                <p>Its illustrious alumni, many of whom have gone on to become celebrated chefs and restaurateurs, are a reflection of the school's unwavering dedication to culinary excellence.</p>
+            </div>
+            <div>
+                <img src="static/images/vault.png" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="image-container">
+        <img id="large-kitchen-img" src="static/images/portrait-kitchen.png" alt="Chef students working in a large kitchen on 50 tables">
+        <div class="small-horizontal-line"></div>
+    </div>
+    <div class="mission-statement">
+        <h2>Mission Statement</h2>
+        <p>Taste Masters Cookery School is dedicated to cultivating culinary excellence and innovation. Our mission is to inspire passion and creativity in every student, empowering them with the skills, knowledge, and confidence to explore the vast world of cuisine.</p>
+        <p>We are committed to providing a nurturing and dynamic learning environment, where tradition meets modernity, and every culinary dream can find its place. Through our comprehensive courses, expert instruction, and state-of-the-art facilities, we aim to shape the next generation of chefs, food enthusiasts, and culinary leaders, fostering a community that thrives on gastronomic excellence and cultural diversity.</p>
+    </div>
     </section>
         <div class="blue-divider">
             <div class="circle-for-icon">
@@ -49,6 +69,7 @@
             </div>
         </div>
     </div>
+    
     <!-- intro section -->
     <section>
         <div class="bkg-container-one">
